--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "e8287210-556b-4ebf-a88b-2169bc86bb20"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
